# demo_hpc

./: Cargo.toml  README.md  cuda_realization.cu  results.json
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: benchmarks_run.rs  mod.rs  results_get.rs
cuda/: Makefile  README.md  cuda_realization.cu
ndarray-example/: Cargo.toml
ndarray-example/src/: lib.rs  main.rs
ndarray-example/tests/: benchmarks.rs
opencl-example/: Cargo.toml
opencl-example/src/: lib.rs  main.rs
opencl-example/tests/: benchmarks.rs
rayon-example/: Cargo.toml
rayon-example/src/: lib.rs  main.rs
rayon-example/tests/: benchmarks.rs
tch-example/: Cargo.toml
tch-example/src/: lib.rs  main.rs
tch-example/tests/: benchmarks.rs
wgsl/: Cargo.toml
wgsl-example/: Cargo.toml
wgsl-example/src/: lib.rs  main.rs  optimized_sum_func.wgsl  sum_func.wgsl  vec_func.wgsl
wgsl-example/tests/: benchmarks.rs
wgsl/src/: batch_functions.rs  lib.rs  main.rs  vec_func.wgsl  vec_functions.rs
wgsl/tests/: benchmarks.rs
wgsl_and_rust_realization/: Cargo.toml
