[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wca = { version = "0.1.3", git = "https://github.com/Wandalen/wTools/", rev = "fcfb08a" }
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
