[package]
name = "tch-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "tests/benchmarks.rs"
harness = false