[package]
name = "wgsl-example"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "*"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
futures-intrusive = "0.5.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "tests/benchmarks.rs"
harness = false