[package]
name = "wgsl_and_rust_realization"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "*"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
futures-intrusive = "0.5.0"
ndarray = "0.15.6"
rayon = "1.7.0"
accel = "*"
tch = "0.4"
coaster = "0.2"
# krnl = "0.0.2"
coaster-nn = "0.5.0"
ocl = "0.19.4"
rand = "0.8"
ndarray-rand = "0.14.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "tests/benchmarks.rs"
harness = false